--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 # ───────────────────────────────────────────────────────
 VITE_VOICE_AGENT_API_URL=https://vapi-voice-production.up.railway.app/api/start-call
 
+VITE_BACKEND_URL=https://vapi-voice-production.up.railway.app/
