--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 # ───────────────────────────────────────────────────────
 # URL OF YOUR PRODUCTION Python Voice Agent (Railway)
 # ───────────────────────────────────────────────────────
-VITE_VOICE_AGENT_API_URL=https://vapi-voice-production.up.railway.app/api/start-call
+VITE_VOICE_AGENT_API_URL=https://web-production-4506.up.railway.app/api/start-call
 
-VITE_BACKEND_URL=https://vapi-voice-production.up.railway.app/
+VITE_BACKEND_URL=https://web-production-4506.up.railway.app
