--- a/supabase/.env
+++ b/supabase/.env
@@ -1,1 +1,1 @@
-VOICE_AGENT_API_URL=https://vapi-voice-production.up.railway.app/api/start-call
+VOICE_AGENT_API_URL=https://web-production-4506.up.railway.app/api/start-call
