--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 VITE_VOICE_AGENT_API_URL=https://web-production-4506.up.railway.app/api/start-call
 VITE_BACKEND_URL=https://web-production-4506.up.railway.app
 VITE_APP_PHONE_NUMBER=+17193017849
+
+VITE_BACKEND_URL=https://web-production-4506.up.railway.app
+VITE_BACKEND_WS_URL=wss://web-production-4506.up.railway.app/ws/ai-stream
+VITE_TO_PHONE=+17193017849
